--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ body {
 .switch {
     position: relative;
     display: inline-block;
-    width: 80px; /* Increased width */
-    height: 40px; /* Increased height */
+    width: 80px;
+    height: 40px;
     margin-top: 20px;
 }
 
@@ -41,17 +41,17 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: black; /* Off state */
+    background-color: black;
     border: 1px solid white;
     transition: background-color 0.4s ease, border-color 0.4s ease;
-    border-radius: 40px; /* Adjust to match the new height */
+    border-radius: 40px;
 }
 
 .slider:before {
     position: absolute;
     content: "";
-    height: 30px; /* Adjust height */
-    width: 30px; /* Adjust width */
+    height: 30px;
+    width: 30px;
     left: 5px;
     bottom: 5px;
     background-color: white;
@@ -60,16 +60,16 @@ body {
 }
 
 input:checked + .slider {
-    background-color: #2196F3; /* Active state */
+    background-color: #FBC02D;
 }
 
 input:checked + .slider:before {
-    transform: translateX(40px); /* Adjust the translation for larger button */
+    transform: translateX(40px);
 }
 
 .icon {
     position: absolute;
-    width: 20px; /* Adjust icon size */
+    width: 20px;
     height: 20px;
     top: 50%;
     transform: translateY(-50%);
@@ -77,7 +77,7 @@ input:checked + .slider:before {
 }
 
 .sun {
-    left: 8px; /* Adjust position for the larger button */
+    left: 8px;
 }
 
 .moon {
